// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createMessageComposerInterface 1`] = `
"export interface SG721Message {
  contractAddress: string;
  sender: string;
  transferNft: ({
    recipient,
    tokenId
  }: {
    recipient: string;
    tokenId: string;
  }, funds_?: Coin[]) => MsgExecuteContractEncodeObject;
  sendNft: ({
    contract,
    msg,
    tokenId
  }: {
    contract: string;
    msg: Binary;
    tokenId: string;
  }, funds_?: Coin[]) => MsgExecuteContractEncodeObject;
  approve: ({
    expires,
    spender,
    tokenId
  }: {
    expires?: Expiration;
    spender: string;
    tokenId: string;
  }, funds_?: Coin[]) => MsgExecuteContractEncodeObject;
  revoke: ({
    spender,
    tokenId
  }: {
    spender: string;
    tokenId: string;
  }, funds_?: Coin[]) => MsgExecuteContractEncodeObject;
  approveAll: ({
    expires,
    operator
  }: {
    expires?: Expiration;
    operator: string;
  }, funds_?: Coin[]) => MsgExecuteContractEncodeObject;
  revokeAll: ({
    operator
  }: {
    operator: string;
  }, funds_?: Coin[]) => MsgExecuteContractEncodeObject;
  mint: ({
    extension,
    owner,
    tokenId,
    tokenUri
  }: {
    extension: Empty;
    owner: string;
    tokenId: string;
    tokenUri?: string;
  }, funds_?: Coin[]) => MsgExecuteContractEncodeObject;
  burn: ({
    tokenId
  }: {
    tokenId: string;
  }, funds_?: Coin[]) => MsgExecuteContractEncodeObject;
}"
`;

exports[`execute classes 1`] = `
"export class SG721MessageComposer implements SG721Message {
  sender: string;
  contractAddress: string;

  constructor(sender: string, contractAddress: string) {
    this.sender = sender;
    this.contractAddress = contractAddress;
    this.transferNft = this.transferNft.bind(this);
    this.sendNft = this.sendNft.bind(this);
    this.approve = this.approve.bind(this);
    this.revoke = this.revoke.bind(this);
    this.approveAll = this.approveAll.bind(this);
    this.revokeAll = this.revokeAll.bind(this);
    this.mint = this.mint.bind(this);
    this.burn = this.burn.bind(this);
  }

  transferNft = ({
    recipient,
    tokenId
  }: {
    recipient: string;
    tokenId: string;
  }, funds_?: Coin[]): MsgExecuteContractEncodeObject => {
    const msg = {
      transfer_nft: {
        recipient,
        token_id: tokenId
      }
    };
    return {
      typeUrl: \\"/cosmwasm.wasm.v1.MsgExecuteContract\\",
      value: MsgExecuteContract.fromPartial({
        sender: this.sender,
        contract: this.contractAddress,
        msg: toUtf8(JSON.stringify(msg)),
        funds: funds_
      })
    };
  };
  sendNft = ({
    contract,
    msg,
    tokenId
  }: {
    contract: string;
    msg: Binary;
    tokenId: string;
  }, funds_?: Coin[]): MsgExecuteContractEncodeObject => {
    const msg = {
      send_nft: {
        contract,
        msg,
        token_id: tokenId
      }
    };
    return {
      typeUrl: \\"/cosmwasm.wasm.v1.MsgExecuteContract\\",
      value: MsgExecuteContract.fromPartial({
        sender: this.sender,
        contract: this.contractAddress,
        msg: toUtf8(JSON.stringify(msg)),
        funds: funds_
      })
    };
  };
  approve = ({
    expires,
    spender,
    tokenId
  }: {
    expires?: Expiration;
    spender: string;
    tokenId: string;
  }, funds_?: Coin[]): MsgExecuteContractEncodeObject => {
    const msg = {
      approve: {
        expires,
        spender,
        token_id: tokenId
      }
    };
    return {
      typeUrl: \\"/cosmwasm.wasm.v1.MsgExecuteContract\\",
      value: MsgExecuteContract.fromPartial({
        sender: this.sender,
        contract: this.contractAddress,
        msg: toUtf8(JSON.stringify(msg)),
        funds: funds_
      })
    };
  };
  revoke = ({
    spender,
    tokenId
  }: {
    spender: string;
    tokenId: string;
  }, funds_?: Coin[]): MsgExecuteContractEncodeObject => {
    const msg = {
      revoke: {
        spender,
        token_id: tokenId
      }
    };
    return {
      typeUrl: \\"/cosmwasm.wasm.v1.MsgExecuteContract\\",
      value: MsgExecuteContract.fromPartial({
        sender: this.sender,
        contract: this.contractAddress,
        msg: toUtf8(JSON.stringify(msg)),
        funds: funds_
      })
    };
  };
  approveAll = ({
    expires,
    operator
  }: {
    expires?: Expiration;
    operator: string;
  }, funds_?: Coin[]): MsgExecuteContractEncodeObject => {
    const msg = {
      approve_all: {
        expires,
        operator
      }
    };
    return {
      typeUrl: \\"/cosmwasm.wasm.v1.MsgExecuteContract\\",
      value: MsgExecuteContract.fromPartial({
        sender: this.sender,
        contract: this.contractAddress,
        msg: toUtf8(JSON.stringify(msg)),
        funds: funds_
      })
    };
  };
  revokeAll = ({
    operator
  }: {
    operator: string;
  }, funds_?: Coin[]): MsgExecuteContractEncodeObject => {
    const msg = {
      revoke_all: {
        operator
      }
    };
    return {
      typeUrl: \\"/cosmwasm.wasm.v1.MsgExecuteContract\\",
      value: MsgExecuteContract.fromPartial({
        sender: this.sender,
        contract: this.contractAddress,
        msg: toUtf8(JSON.stringify(msg)),
        funds: funds_
      })
    };
  };
  mint = ({
    extension,
    owner,
    tokenId,
    tokenUri
  }: {
    extension: Empty;
    owner: string;
    tokenId: string;
    tokenUri?: string;
  }, funds_?: Coin[]): MsgExecuteContractEncodeObject => {
    const msg = {
      mint: {
        extension,
        owner,
        token_id: tokenId,
        token_uri: tokenUri
      }
    };
    return {
      typeUrl: \\"/cosmwasm.wasm.v1.MsgExecuteContract\\",
      value: MsgExecuteContract.fromPartial({
        sender: this.sender,
        contract: this.contractAddress,
        msg: toUtf8(JSON.stringify(msg)),
        funds: funds_
      })
    };
  };
  burn = ({
    tokenId
  }: {
    tokenId: string;
  }, funds_?: Coin[]): MsgExecuteContractEncodeObject => {
    const msg = {
      burn: {
        token_id: tokenId
      }
    };
    return {
      typeUrl: \\"/cosmwasm.wasm.v1.MsgExecuteContract\\",
      value: MsgExecuteContract.fromPartial({
        sender: this.sender,
        contract: this.contractAddress,
        msg: toUtf8(JSON.stringify(msg)),
        funds: funds_
      })
    };
  };
}"
`;

exports[`ownershipClass 1`] = `
"export class OwnershipMessageComposer implements OwnershipMessage {
  sender: string;
  contractAddress: string;

  constructor(sender: string, contractAddress: string) {
    this.sender = sender;
    this.contractAddress = contractAddress;
    this.setFactory = this.setFactory.bind(this);
    this.updateOwnership = this.updateOwnership.bind(this);
  }

  setFactory = ({
    newFactory
  }: {
    newFactory: string;
  }, funds_?: Coin[]): MsgExecuteContractEncodeObject => {
    const msg = {
      set_factory: {
        new_factory: newFactory
      }
    };
    return {
      typeUrl: \\"/cosmwasm.wasm.v1.MsgExecuteContract\\",
      value: MsgExecuteContract.fromPartial({
        sender: this.sender,
        contract: this.contractAddress,
        msg: toUtf8(JSON.stringify(msg)),
        funds: funds_
      })
    };
  };
  updateOwnership = (action: Action, funds_?: Coin[]): MsgExecuteContractEncodeObject => {
    const msg = {
      update_ownership: {}
    };
    return {
      typeUrl: \\"/cosmwasm.wasm.v1.MsgExecuteContract\\",
      value: MsgExecuteContract.fromPartial({
        sender: this.sender,
        contract: this.contractAddress,
        msg: toUtf8(JSON.stringify(msg)),
        funds: funds_
      })
    };
  };
}"
`;

exports[`ownershipInterface 1`] = `
"export interface OwnershipMessage {
  contractAddress: string;
  sender: string;
  setFactory: ({
    newFactory
  }: {
    newFactory: string;
  }, funds_?: Coin[]) => MsgExecuteContractEncodeObject;
  updateOwnership: (action: Action, funds_?: Coin[]) => MsgExecuteContractEncodeObject;
}"
`;
